fix. image tool caption overflow.

--- a/src/company/style.scss
+++ b/src/company/style.scss
@@ -175,6 +175,7 @@
     box-shadow: none;
     border: none;
     opacity: 0.6;
+    overflow: hidden;
 
     &:empty {
       display: none;
