--- a/src/newsDetail/style.scss
+++ b/src/newsDetail/style.scss
@@ -206,6 +206,7 @@
     box-shadow: none;
     border: none;
     opacity: 0.6;
+    overflow: hidden;
 
     &:empty {
       display: none;
